@@ -28,10 +28,6 @@ my $start_memory_blocks_count = SPVM::memory_blocks_count();
   ok(TestCase::Complex->test_cmulf_min());
   ok(TestCase::Complex->test_cdivf());
   ok(TestCase::Complex->test_cdivf_min());
-  ok(TestCase::Complex->test_complexf());
-  ok(TestCase::Complex->test_complex());
-  ok(TestCase::Complex->test_complex_farray());
-  ok(TestCase::Complex->test_complex_darray());
 }
 
 # All object is freed
