@@ -3,8 +3,8 @@ package TestCase::Complex {
   use SPVM::Complex_2d;
 
   sub test_cadd : int () {
-    my $z_in1 = complex(0.25, 0.5);
-    my $z_in2 = complex(0.5, 0.125);
+    my $z_in1 = complexd(0.25, 0.5);
+    my $z_in2 = complexd(0.5, 0.125);
     my $z_out = $z_in1 + $z_in2;
     
     if ($z_out->{re} == 0.75 && $z_out->{im} == 0.625) {
@@ -14,8 +14,8 @@ package TestCase::Complex {
     return 0;
   }
   sub test_cadd_min : int () {
-    my $z_in1 = complex(DBL_MIN(), DBL_MIN());
-    my $z_in2 = complex(0, 0);
+    my $z_in1 = complexd(DBL_MIN(), DBL_MIN());
+    my $z_in2 = complexd(0, 0);
     my $z_out = $z_in1 + $z_in2;
     
     if ($z_out->{re} == DBL_MIN() && $z_out->{im} == DBL_MIN()) {
@@ -26,8 +26,8 @@ package TestCase::Complex {
   }
 
   sub test_csub : int () {
-    my $z_in1 = complex(0.25, 0.5);
-    my $z_in2 = complex(0.5, 0.125);
+    my $z_in1 = complexd(0.25, 0.5);
+    my $z_in2 = complexd(0.5, 0.125);
     my $z_out = $z_in1 - $z_in2;
     
     if ($z_out->{re} == -0.25 && $z_out->{im} == 0.375) {
@@ -37,8 +37,8 @@ package TestCase::Complex {
     return 0;
   }
   sub test_csub_min : int () {
-    my $z_in1 = complex(DBL_MIN(), DBL_MIN());
-    my $z_in2 = complex(0, 0);
+    my $z_in1 = complexd(DBL_MIN(), DBL_MIN());
+    my $z_in2 = complexd(0, 0);
     my $z_out = $z_in1 - $z_in2;
     
     if ($z_out->{re} == DBL_MIN() && $z_out->{im} == DBL_MIN()) {
@@ -49,8 +49,8 @@ package TestCase::Complex {
   }
 
   sub test_cmul : int () {
-    my $z_in1 = complex(0.25, 0.5);
-    my $z_in2 = complex(0.5, 0.125);
+    my $z_in1 = complexd(0.25, 0.5);
+    my $z_in2 = complexd(0.5, 0.125);
     my $z_out = $z_in1 * $z_in2;
     
     if ($z_out->{re} == 0.0625 && $z_out->{im} == 0.28125) {
@@ -60,8 +60,8 @@ package TestCase::Complex {
     return 0;
   }
   sub test_cmul_min : int () {
-    my $z_in1 = complex(DBL_MIN(), 0);
-    my $z_in2 = complex(1, 1);
+    my $z_in1 = complexd(DBL_MIN(), 0);
+    my $z_in2 = complexd(1, 1);
     my $z_out = $z_in1 * $z_in2;
     
     if ($z_out->{re} == DBL_MIN() && $z_out->{im} == DBL_MIN()) {
@@ -72,8 +72,8 @@ package TestCase::Complex {
   }
 
   sub test_cdiv : int () {
-    my $z_in1 = complex(0.25, 0.5);
-    my $z_in2 = complex(0.5, 0.125);
+    my $z_in1 = complexd(0.25, 0.5);
+    my $z_in2 = complexd(0.5, 0.125);
     my $z_out = $z_in1 / $z_in2;
     
     if (($z_out->{re} - 0.70588) < 0.00001 && ($z_out->{im} - 0.82352) < 0.00001) {
@@ -84,8 +84,8 @@ package TestCase::Complex {
   }
   
   sub test_cdiv_min : int () {
-    my $z_in1 = complex(DBL_MIN(), 0);
-    my $z_in2 = complex(1, 0);
+    my $z_in1 = complexd(DBL_MIN(), 0);
+    my $z_in2 = complexd(1, 0);
     my $z_out = $z_in1 / $z_in2;
     
     if ($z_out->{re} == DBL_MIN() && $z_out->{im} == 0) {
@@ -182,56 +182,6 @@ package TestCase::Complex {
     my $z_out = $z_in1 / $z_in2;
     
     if ($z_out->{re} == FLT_MIN() && $z_out->{im} == 0) {
-      return 1;
-    }
-    
-    return 0;
-  }
-
-  sub test_complex_farray : int () {
-    my $z_array = complex_farray(
-      [FLT_MIN(), 2, 4],
-      [(float)1,  3, 5]
-    );
-
-    if ($z_array->[0]{re} == FLT_MIN() && $z_array->[0]{im} == 1
-      && $z_array->[1]{re} == 2 && $z_array->[1]{im} == 3
-      && $z_array->[2]{re} == 4 && $z_array->[2]{im} == 5)
-    {
-      return 1;
-    }
-    
-    return 0;
-  }
-
-  sub test_complex_darray : int () {
-    my $z_array = complex_darray(
-      [DBL_MIN(), 2, 4],
-      [(double)1, 3, 5]
-    );
-
-    if ($z_array->[0]{re} == DBL_MIN() && $z_array->[0]{im} == 1
-      && $z_array->[1]{re} == 2 && $z_array->[1]{im} == 3
-      && $z_array->[2]{re} == 4 && $z_array->[2]{im} == 5)
-    {
-      return 1;
-    }
-    
-    return 0;
-  }
-  
-  sub test_complexf : int () {
-    my $z = complexf(FLT_MIN(), FLT_MIN() + 1);
-    if ($z->{re} == FLT_MIN() && $z->{im} == FLT_MIN() + 1) {
-      return 1;
-    }
-    
-    return 0;
-  }
-
-  sub test_complex : int () {
-    my $z = complex(DBL_MIN(), DBL_MIN() + 1);
-    if ($z->{re} == DBL_MIN() && $z->{im} == DBL_MIN() + 1) {
       return 1;
     }
     
