@@ -3,6 +3,57 @@ package TestCase::Lib::SPVM::CORE {
   use SPVM::Errno;
   use SPVM::Time (time);
 
+
+  sub test_complex_farray : int () {
+    my $z_array = complex_farray(
+      [FLT_MIN(), 2, 4],
+      [(float)1,  3, 5]
+    );
+
+    if ($z_array->[0]{re} == FLT_MIN() && $z_array->[0]{im} == 1
+      && $z_array->[1]{re} == 2 && $z_array->[1]{im} == 3
+      && $z_array->[2]{re} == 4 && $z_array->[2]{im} == 5)
+    {
+      return 1;
+    }
+    
+    return 0;
+  }
+
+  sub test_complex_darray : int () {
+    my $z_array = complex_darray(
+      [DBL_MIN(), 2, 4],
+      [(double)1, 3, 5]
+    );
+
+    if ($z_array->[0]{re} == DBL_MIN() && $z_array->[0]{im} == 1
+      && $z_array->[1]{re} == 2 && $z_array->[1]{im} == 3
+      && $z_array->[2]{re} == 4 && $z_array->[2]{im} == 5)
+    {
+      return 1;
+    }
+    
+    return 0;
+  }
+  
+  sub test_complexf : int () {
+    my $z = complexf(FLT_MIN(), FLT_MIN() + 1);
+    if ($z->{re} == FLT_MIN() && $z->{im} == FLT_MIN() + 1) {
+      return 1;
+    }
+    
+    return 0;
+  }
+
+  sub test_complexd : int () {
+    my $z = complexd(DBL_MIN(), DBL_MIN() + 1);
+    if ($z->{re} == DBL_MIN() && $z->{im} == DBL_MIN() + 1) {
+      return 1;
+    }
+    
+    return 0;
+  }
+
   sub test_strtoi : int () {
     # 10 digit minimal and return type is int
     {
